# ASCENT

./: CMakeLists.txt  Credits.txt  Leiame.txt  README.md
assets/: stage_2.txt  stage_3.txt
assets/stages/: cave.txt  factory.txt
assets/stages/stage1/: stage_1.txt
assets/stages/stage3/: stage_3.txt
include/: Being.h  Game.h
include/Animation/: Animation.h  EnemyAnimation.h  PlayerAnimation.h  TyrantAnimation.h
include/Entities/: Character.h  Coin.h  Enemy.h  Entity.h  EntityFactory.h  EntityList.h  Flag.h  Fly.h  Goomba.h  MovingPlatform.h  Obstacle.h  Platform.h  Player.h  Projectile.h
include/Entities/Characters/: Character.h  Enemy.h  Fly.h  Goomba.h  Player.h  Tyrant.h
include/Entities/Characters/TyrantStates/: TyrantFollowingState.h  TyrantIdleState.h  TyrantJumpingState.h  TyrantShootingState.h  TyrantState.h
include/Entities/Obstacles/: Coin.h  Door.h  Flag.h  MovingPlatform.h  Obstacle.h  Platform.h  Spike.h  Spring.h
include/Manager/: CollisionManager.h  GraphicsManager.h  InputManager.h
include/Manager/Collision/: BounceCollision.h  CollisionManager.h  CollisionStrategy.h  CollisionStrategyFactory.h  DefaultCollision.h  KnockbackCollision.h  NoCollision.h  PhaseCollision.h  PlatformCollision.h  PlayerCollision.h
include/Manager/Event/: EventManager.h  EventObserver.h  EventSubject.h
include/Stage/: Cave.h  Factory.h  FirstStage.h  FourthStage.h  SecondStage.h  Stage.h  StageFactory.h  ThirdStage.h
include/State/: EndStageState.h  GameState.h  InStageState.h  LoadingState.h  MenuState.h  OptionsState.h  PauseState.h  PlayerSelectState.h  RankingState.h  SaveScoreState.h  StageSelectState.h  State.h  StateStack.h  TitleState.h
include/State/Pause/: PauseObserver.h  PauseSubject.h
include/UI/: PlayerHealth.h  TextInput.h
include/Utility/: Constants.h  Context.h  CustomVector.h  Fonts.h  HitboxSprite.h  List.h  ResourceHolder.h  Sounds.h  Textures.h  ViewShake.h
include/Utility/Threads/: LoadingThread.h  Thread.h
saves/: entities.json  highscore.json  player.json  players.json  stage.json
saves/quickSave/: entities.json  players.json
src/: Being.cpp  Context.cpp  Game.cpp
src/Animation/: Animation.cpp  EnemyAnimation.cpp  PlayerAnimation.cpp  TyrantAnimation.cpp
src/Entities/: Character.cpp  Coin.cpp  Enemy.cpp  Entity.cpp  EntityFactory.cpp  EntityList.cpp  Flag.cpp  Fly.cpp  Goomba.cpp  MovingPlatform.cpp  Obstacle.cpp  Platform.cpp  Player.cpp  Projectile.cpp
src/Entities/Characters/: Character.cpp  Enemy.cpp  Fly.cpp  Goomba.cpp  Player.cpp  Tyrant.cpp
src/Entities/Characters/TyrantStates/: TyrantFollowingState.cpp  TyrantIdleState.cpp  TyrantJumpingState.cpp  TyrantShootingState.cpp  TyrantState.cpp
src/Entities/Obstacles/: Coin.cpp  Door.cpp  Flag.cpp  MovingPlatform.cpp  Obstacle.cpp  Platform.cpp  Spike.cpp  Spring.cpp
src/Manager/: CollisionManager.cpp  GraphicsManager.cpp  InputManager.cpp
src/Manager/Collision/: BounceCollision.cpp  CollisionManager.cpp  CollisionStrategy.cpp  CollisionStrategyFactory.cpp  DefaultCollision.cpp  KnockbackCollision.cpp  NoCollision.cpp  PhaseCollision.cpp  PlatformCollision.cpp  PlayerCollision.cpp
src/Manager/Event/: EventManager.cpp  EventObserver.cpp  EventSubject.cpp
src/Stage/: Cave.cpp  Factory.cpp  FirstStage.cpp  FourthStage.cpp  SecondStage.cpp  Stage.cpp  StageFactory.cpp  ThirdStage.cpp
src/State/: EndStageState.cpp  GameState.cpp  InStageState.cpp  LoadingState.cpp  MenuState.cpp  OptionsState.cpp  PauseState.cpp  PlayerSelectState.cpp  RankingState.cpp  SaveScoreState.cpp  StageSelectState.cpp  State.cpp  StateStack.cpp  TitleState.cpp
src/State/Pause/: PauseObserver.cpp  PauseSubject.cpp
src/UI/: PlayerHealth.cpp  TextInput.cpp
src/Utility/: Context.cpp  CustomVector.cpp  HitboxSprite.cpp  ViewShake.cpp
src/Utility/Threads/: LoadingThread.cpp  Thread.cpp
